# haskell-js-templates

./: .gitignore  README.md  cabal.project  flake.nix  hello-spa.cabal  hello.cabal  hie.yaml
src/backend/: Main.hs
src/frontend/: Main.hs
templates/01-counter/: LICENSE  README.md  cabal.project  flake.nix
templates/01-counter/src/common/: Common.hs
templates/01-counter/src/frontend/: Main.hs
templates/02-auth/: LICENSE  README.md  cabal.project  hello-spa.cabal
templates/02-auth/nix/: hix.nix
templates/02-auth/src/backend/: Main.hs
templates/02-auth/src/common/: Common.hs
templates/03-auth-login/: README.md  cabal.project  hello-spa.cabal
templates/03-auth-login/jsbits/: crypto.js
templates/03-auth-login/nix/: hix.nix
templates/03-auth-login/src/backend/: Main.hs
templates/03-auth-login/src/common/: Common.hs
templates/03-auth-login/src/frontend/: Main.hs  Routed.hs
templates/04-oauth/: .ghci  README.md  cabal.project  flake.nix  hello-spa.cabal  hie.yaml
templates/04-oauth/nix/: hix.nix
templates/04-oauth/src/backend/: Config.hs  JWT.hs  Main.hs  Server.hs
templates/04-oauth/src/backend/Config/: Authorization.hs  CORS.hs  CSRF.hs  HMAC.hs  JWT.hs
templates/04-oauth/src/backend/Middleware/: Authorization.hs  CSRF.hs  HMAC.hs
templates/04-oauth/src/common/: Api.hs
templates/04-oauth/src/common/Api/: OAuth.hs
templates/04-oauth/src/frontend/: Main.hs
