cabal-version:      3.0
name:               hello-spa
version:            0.0.0.1
license:            MIT
license-file:       LICENSE
copyright:          (c) Samuel Evans-Powell
author:             Samuel Evans-Powell
maintainer:         Samuel Evans-Powell <sam@sambnt.io>
bug-reports:        mailto:sam@sambnt.io
homepage:           https://www.github.com/sambnt/haskell-spa
synopsis:           An example Haskell front-end/back-end package
build-type:         Simple

Description:
  This is an example application containing both frontend code (using Miso and
  the new GHC Javascript backend) and backend code written in Haskell. This
  package is meant to provide a good starting point for writing Haskell web
  applications. Please submit any suggestions and improvements.

flag jsaddle
  manual: True
  default:
    False
  description:
    Compile with JSaddle

flag ios
  manual: True
  default:
    False
  description:
    Cross compile to iOS

library
  hs-source-dirs:
    src/common
  build-depends:
      base < 5
    , aeson
    , servant
    , containers
    , servant-client-core
    , text
    , network-uri
    , mtl
    , bytestring
    , uri-bytestring
    , exceptions
    , stm
    , cookie
  exposed-modules:
    Api
    Api.OAuth

executable hello-backend
  main-is:
    Main.hs
  if impl(ghcjs) || arch(javascript) || flag(jsaddle)
    buildable: False
  hs-source-dirs:
    src/backend
  ghc-options:
    -threaded
  other-modules:
    Config
    Config.JWT
    Config.HMAC
    Config.Authorization
    Config.CSRF
    Config.CORS
    Middleware.Authorization
    Middleware.CSRF
    Middleware.HMAC
    JWT
    Server
  build-depends:
      base < 5
    , aeson
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , case-insensitive
    , containers
    , cookie
    , cryptonite
    , entropy
    , exceptions
    , hello-spa
    , http-client
    , http-client-tls
    , http-types
    , jose
    , memory
    , microlens
    , mtl
    , optparse-applicative
    , servant
    , servant-client
    , servant-server
    , stm
    , text
    , uri-bytestring
    , utf8-string
    , wai
    , wai-cors
    , warp

executable hello-frontend
  main-is:
    Main.hs
  -- if flag(jsaddle)
  --   build-depends:
  --       websockets
  --     , warp
  -- else
  --   build-depends:
  --       ghcjs-base
  --     , ghcjs-dom-javascript
  if !impl(ghcjs) && !arch(javascript)
    build-depends:
        websockets
      , warp
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    src/frontend
  build-depends:
      base < 5
    , aeson
    , containers
    , miso
    , either
    , transformers
    , bytestring
    , servant-client-core
    , http-types
    , hello-spa
    , servant-jsaddle
    , base64-bytestring
    , base16-bytestring
    , text
    , uri-bytestring
    , network-uri
    , servant
    , ghcjs-dom
    , jsaddle
  default-language:
    Haskell2010
  if flag(ios)
    cpp-options:
      -DIOS
    ghc-options:
      -threaded
    build-depends:
      jsaddle-wkwebview
  else
    build-depends:
      jsaddle-warp
